# py-todo-csv

./: README.md  pyproject.toml
simple_todo/: .list.csv  main.py
