[tool.poetry]
name = "simple-todo"
version = "0.1.0"
description = "The simplest python ToDo app"
authors = ["jppitol <joaopedropitol@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
todo = "simple_todo.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
pandas = "^2.1.4"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
